deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: big-monolith
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hunger-check
  namespace: big-monolith
spec:
  selector:
    matchLabels:
      app: hunger-check
  template:
    metadata:
      labels:
        app: hunger-check
    spec:
      serviceAccountName: big-monolith-sa
      containers:
      - name: hunger-check
        image: madhuakula/k8s-goat-hunger-check
        # resources:
        #   limits:
        #     memory: "1000Gi"
        #   requests:
        #     memory: "1000Gi"
        # command: ["stress-ng"]
        # args: ["--vm", "1", "--vm-bytes", "500M", "--vm-hang", "1", "-v"]
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
        volumeMounts:
          - mountPath: /host-system/
            name: hunger-check-volume
      volumes:
        - name: hunger-check-volume
          hostPath:
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: hunger-check
  namespace: big-monolith
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: hunger-check
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: big-monolith
  name: hunger-check-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hunger-check.stud.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hunger-check
                port:
                  number: 8080
